--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <head>
 	<title>Happy Birthday</title>
 	<meta charset="UTF-8" />
-	<meta name="description" content="Happy Birthday Xola">
+	<meta name="description" content="Happy Birthday wxy">
 	<meta name="robots" content="index, follow" />
 	<link rel="author" href="https://plus.google.com/u/1/+AyushSharma1/" /> 
     <meta name="keywords" content="Birthday, Happy">
@@ -104,66 +104,53 @@
 		</div>
 		<div class="row message">
 			<div class="col-md-12">
-				<p>Today is...</p>
-				<p>as beautiful as other days</p>
-				<p>but you realize</p>
-				<p>another year has gone</p>
-				<p>in a blink of the eyes</p>
-				<p><strong>however</strong></p>
-				<p>Do you know..?</p>
-				<p>today is just special</p>
-				<p>so special to you</p>
-				<p>that's why</p>
-				<p>Let's make it...</p>
-				<p>the best celebration ever</p>
-				<p>and let me share...</p>
-				<p>a piece of happiness to you</p>
-				<p>I made all this...</p>
-				<p>as a birthday present to you</p>
-				<p>thanks for being there</p>
-				<p>thanks for the friendship we made</p>
-				<p>thanks for everything</p>
-				<p>I wish you all the best</p>
-				<p>May your life be at ease</p>
-				<p>May all your wishes come true</p>
-				<p>Remember</p>
-				<p>your ambitions</p>
-				<p>you live as a free bird...</p>
-				<p>flying in the blue sky</p>
-				<p>Now things are different...</p>
-				<p>real story of your life</p>
-				<p>is just about to begin</p>
-				<p>indeed..</p>
-				<p>but...</p>
-				<p>don't worry</p>
-				<p>because...</p>
-				<p>God has your back</p>
-				<p>and</p>
-				<p>this year will be better</p>
-				<p>and I hope</p>
-				<p>you'll find...</p>
-				<p>happiness along the way</p>
-				<p>keep your spirit up</p>
-				<p>enjoy every single moment...</p>
-				<p>that you experience today</p>
-				<p>fill it with your most beautiful smile</p>
-				<p>and make it the best memory..</p>
-				<p>lastly...</p>
-				<p>I'd like to wish you one more time</p>
-				<p>a very happy birthday Xola Mathembisa</p>
+				<p>亲爱的姐姐，</p>
+				<p>祝你生日快乐！</p>
+				<p>今天是你的生日，</p>
+				<p>我希望你能收到</p>
+				<p>来自四面八方的祝福，</p>
+				<p>感受到无尽的爱与关怀。</p>
+				<p>愿你在未来的日子里</p>
+				<p>永远健康</p>
+				<p>幸福</p>
+				<p>每一个清晨</p>
+				<p>都洋溢着笑容。</p>
+				<p>每一个夜晚</p>
+				<p>都能带着</p>
+				<p>美好的回忆入睡</p>
+				<p>愿你的生日充满</p>
+				<p>欢笑和惊喜，</p>
+				<p>愿你的每一个愿望</p>
+				<p>都能实现，</p>
+				<p>愿你的生命旅程中</p>
+				<p>充满惊喜和挑战，</p>
+				<p>无论前路有多么曲折，</p>
+				<p>总会有支持和鼓励伴随你，</p>
+				<p>与你</p>
+				<p>共同迎接</p>
+				<p>美好的未来。</p>
+				<p>你是如此特别，</p>
+				<p>世间的一切你值得拥有。</p>
+				<p>愿你在新的一年里</p>
+				<p>收获更多的</p>
+				<p>快乐和成功。</p>
+				<p>愿你</p>
+				<p>的每一天都充满阳光和微笑。</p>
+				<p>再次祝你</p>
+				<p>生日快乐！</p>
 			</div>
 		</div>
 		<div class="navbar navbar-fixed-bottom">
 			<div class="row">
 				<div class="col-md-6 text-center col-md-offset-3">
-					<button class="btn btn-primary" id="turn_on">Turn On Lights</button>
-					<button class="btn btn-primary" id="play">Play Music</button>
+					<button class="btn btn-primary" id="turn_on">点灯</button>
+					<button class="btn btn-primary" id="play">播放音乐</button>
 					<button class="btn btn-primary" id="bannar_coming">Let's Decorate</button>
-					<button class="btn btn-primary" id="balloons_flying">Fly With Balloons</button>
-					<button class="btn btn-primary" id="cake_fadein">Most Delicious Cake Ever</button>
+					<button class="btn btn-primary" id="balloons_flying">放飞气球</button>
+					<button class="btn btn-primary" id="cake_fadein">美味的蛋糕</button>
 					<button class="btn btn-primary" id="light_candle"> Light Candle</button>
 					<button class="btn btn-primary" id="wish_message">Happy Birthday</button>
-					<button class="btn btn-primary" id="story">A mesage for you</button>
+					<button class="btn btn-primary" id="story">A message for you</button>
 					<!-- <button class="btn btn-primary" id="cake_cut">Lrt's Cut the Cake</button> -->
 				</div>
 			</div>
