--- a/index.html
+++ b/index.html
@@ -45,13 +45,13 @@
     	<h2 style="color:#D14D39;">D</h2>
     </div>
 	<div class="balloons text-center" id="b4">
-    	<h2 style="color:#8FAD00;">左</h2>
+    	<h2 style="color:#8FAD00;">姐</h2>
     </div>
 	<div class="balloons text-center" id="b5">
-    	<h2 style="color:#8377E4;">屹</h2>
+    	<h2 style="color:#8377E4;">姐</h2>
     </div>
     <div class="balloons text-center" id="b6">
-    	<h2 style="color:#99C96A;">婷</h2>
+    	<h2 style="color:#99C96A;"></h2>
     </div>
     <div class="balloons text-center" id="b7">
     	<h2 style="color:#20CFB4;"> </h2>
